2014-01-10  Jeff Johnston  <jjohnstn@redhat.com>

	* arm/configure.in: Revert previous fix and change host_makefile_frag
	to calculate the absolute location of srcdir/../config/default.mh.
	* arm/configure: Regenerated.

2014-01-07  Jeff Johnston  <jjohnstn@redhat.com>

	* arm/configure.in: Fix host_makefile_frag to use ac_abs_srcdir.
	* arm/configure: Regenerated.

2013-12-04  Steve Ellcey <sellcey@mips.com>

	* mips/cfe_api.h: Include stdint.h.

2013-11-21  Daniel Ramirez <javamonn@gmail.com>

	* d30v/syscalls.c, i960/mon960.c, m68k/io-stat.c, mt/stat.c,
	spu/lstat.c, spu/stat.c: Add restrict keyword.

2013-11-21  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* aarch64/ftruncate.c: Include errno.h.
	(ftruncate) Set errno.
	* aarch64/truncate.c: Include errno.h.
	(truncate) Set errno.

2013-11-20  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* arm/ftruncate.c: Include errno.h.
	(ftruncate) Set errno.
	* arm/truncate.c: Include errno.h.
	(truncate) Set errno.

2013-11-18  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* arm/ftruncate.c: New.
	* arm/truncate.c: New.
	* arm/Makefile.in (RDPMON_OBJS): Add ftruncate.o and truncate.o.
	(rdimon-ftruncate.o, rdimon-truncate.o): New rule:

2013-10-14  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	* arm/cpu-init/rdimon-aem.S: Disable for M class cores.
	* arm/crt0.S: Don't call _rdimon_hw_init_hook for non-A class cores.
	* arm/cpu-init/Makefile.in (CPU_INIT_OBJS): Use CFLAGS.

2013-09-30  Steve Ellcey  <sellcey@mips.com>

	* mips/Makefile.in (install): Add mkdir, fix install command.

2013-09-27  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* arm/Makefile.in (RDIMON_SCRIPTS): Add aprofile-validation.specs.
	* arm/elf-aprofile-validation.specs: New.

2013-09-20  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
	    Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
	    Greta Yorsh  <greta.yorsh@arm.com>

	* arm/Makefile.in: Add support for cpu-init directory and add
	elf-aprofile-ve.specs.