@@ -1,3 +1,8 @@
+2014-01-24  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	* aarch64/cpu-init/rdimon-aem-el3.S (flat_map): Clear WXN bit
+	in SCTLR_EL3. Add dsb.
+
 2014-01-10  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* arm/configure.in: Revert previous fix and change host_makefile_frag
